# pheno-encoder

./: README.md  gen_pheno_from_disease.py  main.py  pyproject.toml
data/raw/sample_disease_phenotypes/: terms_for_Carpenter Syndrome.csv  terms_for_Congenital diaphragmatic hernia.csv  terms_for_Craniofacial Disorders.csv  terms_for_Omphalocele.csv  terms_for_Prader Willi Syndrome.csv  terms_for_Saethre-Chotzen Syndrome.csv
sample disease phenotypes/: Angelman syndrome 1  terms_for_Biotinidase Deficiency.csv  terms_for_Craniosynostosis.csv  terms_for_Crouzon Syndrome.csv  terms_for_Marfan Syndrome.csv  terms_for_Microtia.csv  terms_for_Pfeiffer Syndrome.csv  terms_for_Phenylketonuria.csv  terms_for_Treacher Collins Syndrome.csv
src/data/: data_extraction.py  data_preprocessing.py
src/model/: autoencoder.py  train.py
tests/: test_data_extraction.py  test_data_preprocessing.py
