[tool.poetry]
name = "pheno-encoder"
version = "0.1.0"
description = ""
authors = ["Alex Abbey <alexabbey4@gmail.com>"]
readme = "README.md"
packages = [{include = "pheno_encoder"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
sklearn = "^0.0.post7"
torch = "^2.0.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
